[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ldsctrlest"
version = "0.9.0"
description = "Python bindings for ldsCtrlEst"
authors = [{ name = "Kyle Johnsen" }, { name = "Michael Bolus" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.6"

[tool.setuptools]
packages = ["ldsctrlest"]
include-package-data = true

[tool.setuptools.package-data]
ldsctrlest = ["*.pyd", "*.lib", "*.pdb", ".so", ".dylib", ".dll"]

[tool.pytest.ini_options]
testpaths = ["tests"]
